@@ -878,6 +878,7 @@ typedef struct hc_device_param
 
   u32     sm_major;
   u32     sm_minor;
+  u32     kernel_exec_timeout;
 
   u8      pcie_bus;
   u8      pcie_device;
